--- a/LineUp/app/src/main/res/layout/owner_table.xml
+++ b/LineUp/app/src/main/res/layout/owner_table.xml
@@ -3,6 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width=""
-        android:layout_height=""></LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></LinearLayout>
 </LinearLayout>
