--- a/LineUp/app/src/main/res/layout-land/owner_table.xml
+++ b/LineUp/app/src/main/res/layout-land/owner_table.xml
@@ -22,7 +22,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
                 <RelativeLayout
-                    android:background="@drawable/round_box_ing"
+                    android:background="@drawable/round_box_table"
                     android:id="@+id/tb1"
 
                     android:layout_width="match_parent"
@@ -954,6 +954,7 @@
             android:layout_marginTop="20dp"
             android:layout_below="@+id/circle2"
             android:layout_centerHorizontal="true"
+            android:id="@+id/circle3"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/round_logo"/>
