--- a/LineUp/app/src/main/res/layout/owner_info_1.xml
+++ b/LineUp/app/src/main/res/layout/owner_info_1.xml
@@ -24,7 +24,7 @@
                     android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="<이번 달 방문자 수>"/>
+                    android:text="이번 달 방문자 수"/>
                 <TextView
                     android:layout_marginLeft="10dp"
                     android:textSize="20dp"
@@ -73,7 +73,7 @@
                     android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="<지난 달 방문자 수>"/>
+                    android:text="지난 달 방문자 수"/>
                 <TextView
                     android:layout_marginLeft="10dp"
                     android:textSize="20dp"
@@ -117,7 +117,7 @@
             android:layout_height="40dp">
             <TextView
                 android:textSize="20dp"
-                android:text="<시간대 별 방문 수>"
+                android:text="시간대 별 방문 수"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
