--- a/LineUp/app/src/main/res/layout/owner_maintable.xml
+++ b/LineUp/app/src/main/res/layout/owner_maintable.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:paddingBottom="50dp"
         android:paddingTop="50dp"
@@ -108,11 +108,12 @@
         android:background="#757575"
         android:layout_width="150dp"
         android:layout_height="match_parent">
-        <LinearLayout
+        <!--<LinearLayout
             android:background="@color/maincolor"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="70dp">
+
             <TextView
                 android:id="@+id/table_manage"
                 android:layout_width="match_parent"
@@ -122,7 +123,9 @@
                 android:gravity="center"
                 android:textSize="20dp"
                 android:text="테이블 관리"/>
+
         </LinearLayout>
+-->
         <ImageView
             android:id="@+id/circle"
             android:layout_marginTop="50dp"
