--- a/LineUp/app/src/main/res/layout/owner_resrvation_page.xml
+++ b/LineUp/app/src/main/res/layout/owner_resrvation_page.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@color/margin"
-    android:layout_width="match_parent"
+    android:layout_width="400dp"
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -67,7 +67,7 @@
                     android:layout_marginLeft="2dp"
                     android:layout_marginRight="2dp"
                     android:gravity="center"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <EditText
@@ -105,30 +105,47 @@
                 android:paddingRight="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <LinearLayout
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
+                        android:layout_centerInParent="true"
                         android:id="@+id/selection_1"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
-                <LinearLayout
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
-
+                        android:layout_centerInParent="true"
                         android:id="@+id/selection_2"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
-                <LinearLayout
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="2"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
@@ -136,47 +153,81 @@
                     <ImageView
 
                         android:id="@+id/selection_3"
-
+                        android:layout_centerInParent="true"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
-                <LinearLayout
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="3"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
-
+                        android:layout_centerInParent="true"
                         android:id="@+id/selection_4"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
-                <LinearLayout
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="4"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
+
+                        android:layout_centerInParent="true"
                         android:clickable="true"
                         android:id="@+id/selection_5"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
-                <LinearLayout
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="5"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
-
+                        android:layout_centerInParent="true"
                         android:id="@+id/selection_6"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="6"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -243,16 +294,18 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-        android:layout_marginTop="20dp"
+        android:paddingBottom="30dp"
+        android:layout_marginTop="120dp"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="80dp"
         android:gravity="center_horizontal">
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="170dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:gravity="center">
             <RelativeLayout
+                android:layout_marginRight="30dp"
                 android:id="@+id/Ok"
                 android:layout_width="0dp"
                 android:layout_weight="1"
