--- a/LineUp/app/src/main/res/layout/owner_resrvation_page.xml
+++ b/LineUp/app/src/main/res/layout/owner_resrvation_page.xml
@@ -255,41 +255,66 @@
                 android:paddingRight="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_marginRight="2dp"
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
-
-                        android:layout_width="70dp"
+                        android:layout_centerInParent="true"
+                        android:id="@+id/owner_date"
+                        android:layout_width="65dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/date"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
-                        android:layout_width="70dp"
+                        android:layout_centerInParent="true"
+                        android:id="@+id/owner_family"
+                        android:layout_width="65dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_marginLeft="2dp"
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/family"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
+                <RelativeLayout
                     android:gravity="center"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent">
                     <ImageView
-                        android:layout_width="70dp"
+                        android:layout_centerInParent="true"
+                        android:id="@+id/owner_group"
+                        android:layout_width="65dp"
                         android:layout_height="30dp"
                         android:src="@drawable/reservation_select_event_number"/>
-                </LinearLayout>
+                    <TextView
+                        android:layout_centerInParent="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/group"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"/>
+                </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
