--- a/LineUp/app/src/main/res/layout/setting.xml
+++ b/LineUp/app/src/main/res/layout/setting.xml
@@ -89,16 +89,26 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/version"
             android:layout_marginLeft="30dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textColor="@color/black"
             android:gravity="center_vertical"
             android:textSize="15dp"
-            android:text="@string/version_2"/>
+            android:text="@string/version_2"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:text="1.0.0"/>
     </LinearLayout>
     <LinearLayout
         android:paddingLeft="30dp"
