--- a/LineUp/app/src/main/res/layout/owner_maintable.xml
+++ b/LineUp/app/src/main/res/layout/owner_maintable.xml
@@ -108,7 +108,7 @@
         android:background="#757575"
         android:layout_width="150dp"
         android:layout_height="match_parent">
-        <!--<LinearLayout
+        <LinearLayout
             android:background="@color/maincolor"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
@@ -125,7 +125,7 @@
                 android:text="테이블 관리"/>
 
         </LinearLayout>
--->
+
         <ImageView
             android:id="@+id/circle"
             android:layout_marginTop="50dp"
